# freesas

./: .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.txt  LICENSE  MANIFEST.in  README.md  README.rst  all_testdata.json  bootstrap.py  build-deb.sh  build-doc.py  circle.yml  copyright  meson.build  py2deb  pyproject.toml  requirements-dev.txt  requirements.txt  requirments-dev.txt  run_tests.py  setup.py  version.py
.github/workflows/: pylint.yml  python-package-mac.yml  python-package-ubuntu.yml  python-package.yml  release.yml
IECsub/: .project  HPLCrun.py  IECapp.py  IECview.py  Untitled.ipynb  silxcode.py
ci/: appveyor.yml  requirement_appveyor.txt  requirement_appveyor_2017.txt  requirement_appveyor_2019.txt  requirement_circle.txt  requirement_travis.txt  requirements_rtd.txt
doc/: Makefile  make.bat
doc/html/: .buildinfo  FreeSAS.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_sources/: index.txt
doc/html/api/: modules.html
doc/source/: FreeSAS.rst  bift.rst  changelog.rst  conf.py  cormap.rst  coverage.rst  dummy_atom_model.rst  guinier.rst  installation.rst  quick_analysis.rst  test.rst
doc/source/api/: modules.rst
e2etest/: e2etest.py  e2etest_auto_gpa.py  e2etest_bift.py  e2etest_cormap.py  e2etest_freeasas.py  e2etest_freesas.py  e2etest_guinier_apps.py  requirements_e2e.txt
freesas/: __init__.py  _autorg.pyx  _bift.pyx  _cormap.pyx  _distance.pyx  _distance_nomp.pxi  _distance_nomp.pyx  _distance_omp.pxi  align.py  autorg.py  autorg.pyx  average.py  bift.py  collections.py  cormap.py  cormap.pyx  decorators.py  directories.py  fitting.py  invariants.py  isnan.pxd  model.py  plot.py  sas_argparser.py  sasio.py  setup.py  transformations.py
freesas/app/: __init__.py  auto_gpa.py  auto_guinier.py  autorg.py  bift.py  cormap.py  extract_ascii.py  fitting.py  guinier_fitting.py  plot_sas.py  sas_argparser.py  supycomb.py
freesas/resources/: all_testdata.json
freesas/scripts/: supcomb.py
freesas/test/: __init__.py  mock_open_38.py  test_align.py  test_all.py  test_autorg.py  test_average.py  test_bift.py  test_cormap.py  test_distance.py  test_fitting.py  test_model.py  test_sas_argparser.py  test_sasio.py  utilstests.py
package/debian10/: changelog  control  rules
package/debian11/: control  rules
package/debian12/: control  rules
package/debian13/: rules
package/debian8/: changelog  control  python-silx-doc.doc-base  rules  watch
package/debian9/: control  python-freesas-doc.doc-base  rules
scripts/: autorg.py  cormap.py  supcomb.py  supycomb.py
src/freesas/: __init__.py  _version.py  align.py  autorg.py  average.py  bift.py  containers.py  cormap.py  decorators.py  dnn.py  fitting.py  invariants.py  meson.build  model.py  nexus_parser.py  plot.py  sas_argparser.py  sasio.py  transformations.py
src/freesas/app/: auto_gpa.py  auto_guinier.py  autorg.py  bift.py  cormap.py  dnn.py  extract_ascii.py  meson.build  plot_sas.py  supycomb.py
src/freesas/ext/: _autorg.pyx  _bift.pyx  _distance.pyx  isnan.pxd  meson.build
src/freesas/resources/: __init__.py  meson.build
src/freesas/resources/keras_models/: Rg+Dmax.keras  config.json  meson.build  metadata.json  model.weights.h5
src/freesas/test/: __init__.py  meson.build  mock_open_38.py  test_align.py  test_all.py  test_autorg.py  test_average.py  test_bift.py  test_cormap.py  test_distance.py  test_dnn.py  test_fitting.py  test_model.py  test_resources.py  test_sas_argparser.py  test_sasio.py  utilstest.py
test/: test_align.py  test_all.py  test_average.py  test_distance.py  test_model.py  utilstests.py
