subdir('app')
subdir('ext')
subdir('test')


py.install_sources([
    '__init__.py',
    'align.py',
    'autorg.py',
    'average.py',
    'bift.py',
    'containers.py',
    'cormap.py',
    'decorators.py',
    'fitting.py',
    'invariants.py',
    'model.py',
    'plot.py',
    'sas_argparser.py',
    'sasio.py',
    'transformations.py',
    'dnn.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'freesas'  # Folder relative to site-packages to install to
)
