py.install_sources([
    '__init__.py',
    'auto_gpa.py',
    'auto_guinier.py',
    'autorg.py',
    'bift.py',
    'cormap.py',
    'extract_ascii.py',
    'plot_sas.py',
    'supycomb.py',
    'dnn.py'
],
  pure: false,    # Will be installed next to binaries
  subdir: 'freesas/app'  # Folder relative to site-packages to install to
)
