py.extension_module('_distance',
        '_distance.pyx',
        dependencies : py_dep,
        include_directories : ['include'],
        install: true,
        subdir: 'freesas',
        )

py.extension_module('_cormap',
        '_cormap.pyx',
        dependencies : py_dep,
        include_directories : ['include'],
        install: true,
        subdir: 'freesas',
        )

py.extension_module('_autorg',
        '_autorg.pyx',
        dependencies : py_dep,
        include_directories : ['include'],
        install: true,
        subdir: 'freesas',
        )

py.extension_module('_bift',
        '_bift.pyx',
        dependencies : py_dep,
        include_directories : ['include'],
        install: true,
        subdir: 'freesas',
        )
