py.install_sources([
'__init__.py',
'mock_open_38.py',
'test_align.py',
'test_all.py',
'test_autorg.py',
'test_average.py',
'test_bift.py',
'test_cormap.py',
'test_distance.py',
'test_fitting.py',
'test_model.py',
'test_sas_argparser.py',
'test_sasio.py',
'utilstest.py',
],
  pure: false,    # Will be installed next to binaries
  subdir: 'freesas/test'  # Folder relative to site-packages to install to
)
